Temp commit for today

--- a/poc-api-oauth2-application/pom.xml
+++ b/poc-api-oauth2-application/pom.xml
@@ -8,15 +8,30 @@
 		<artifactId>poc-api-oauth2</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>poc-api-oauth2-resource-server</artifactId>
+	<artifactId>poc-api-oauth2-application</artifactId>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter</artifactId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.springframework.boot</groupId> -->
+<!-- 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId> -->
+<!-- 		</dependency> -->
+		<dependency>
+			<groupId>idv.shawnyang</groupId>
+			<artifactId>poc-api-oauth2-domain</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+			<groupId>idv.shawnyang</groupId>
+			<artifactId>poc-api-oauth2-shared</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
