temp commit for today

--- a/poc-api-oauth2-application/src/main/resources/application.properties
+++ b/poc-api-oauth2-application/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.jpa.open-in-view=false
-#spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
-#spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8083/auth/realms/baeldung
+#spring.security.oauth2.client.registration.github.client-id=1e0b497f40821eace60e
+#spring.security.oauth2.client.registration.github.client-secret=207aa7f4f304424bab69060eef4052ab499da758
