--- a/poc-api-oauth2-application/pom.xml
+++ b/poc-api-oauth2-application/pom.xml
@@ -14,10 +14,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.boot</groupId> -->
-<!-- 			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-client</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>idv.shawnyang</groupId>
 			<artifactId>poc-api-oauth2-domain</artifactId>
