--- a/poc-api-oauth2-application/src/main/resources/application.properties
+++ b/poc-api-oauth2-application/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.jpa.open-in-view=false
-#spring.security.oauth2.client.registration.github.client-id=1e0b497f40821eace60e
-#spring.security.oauth2.client.registration.github.client-secret=207aa7f4f304424bab69060eef4052ab499da758
+spring.security.oauth2.client.registration.github.client-id=1e0b497f40821eace60e
+spring.security.oauth2.client.registration.github.client-secret=207aa7f4f304424bab69060eef4052ab499da758
+spring.security.oauth2.client.registration.google.client-id=959740407129-8phv2assrinuk34cee7gadde351tsgin.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
