--- a/poc-api-oauth2-application/pom.xml
+++ b/poc-api-oauth2-application/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>spring-boot-starter-oauth2-client</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.18.2</version>
+		</dependency>
+		<dependency>
 			<groupId>idv.shawnyang</groupId>
 			<artifactId>poc-api-oauth2-domain</artifactId>
 			<version>${project.version}</version>
